validation checks tested and changed to meet proper parameter requirements.
