# swagger.json
@@ -14,9 +14,7 @@
   "paths": {
     "/admin/": {
       "get": {
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "summary": "Get All Admin (lvl 1) or Manager (lvl 2) records.",
         "description": "Get All Admin (lvl 1) or Manager (lvl 2) records.",
         "parameters": [
@@ -51,16 +49,12 @@
         },
         "security": [
           {
-            "Admin": [
-              "read"
-            ]
+            "Admin": ["read"]
           }
         ]
       },
       "post": {
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "summary": "Create a new Admin (lvl 1) or Manager (lvl 2) record.",
         "description": "Create a new Admin (lvl 1) or Manager (lvl 2) record.",
         "responses": {
@@ -85,9 +79,7 @@
         },
         "security": [
           {
-            "Admin": [
-              "write"
-            ]
+            "Admin": ["write"]
           }
         ],
         "requestBody": {
@@ -103,9 +95,7 @@
     },
     "/admin/{id}": {
       "get": {
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "summary": "Get Admin (lvl 1) or Manager (lvl 2) record by ID.",
         "description": "Get Admin (lvl 1) or Manager (lvl 2) record by ID.",
         "parameters": [
@@ -113,13 +103,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "user_id",
-            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -147,16 +130,12 @@
         },
         "security": [
           {
-            "Admin": [
-              "read"
-            ]
+            "Admin": ["read"]
           }
         ]
       },
       "put": {
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "summary": "Update Admin/Manager record, ref'd by _id, with optional fields.",
         "description": "Update Admin/Manager record, ref'd by _id, with optional fields.",
         "parameters": [
@@ -164,13 +143,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "user_id",
-            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -204,9 +176,7 @@
         },
         "security": [
           {
-            "Admin": [
-              "write"
-            ]
+            "Admin": ["write"]
           }
         ],
         "requestBody": {
@@ -220,9 +190,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Admin"
-        ],
+        "tags": ["Admin"],
         "summary": "Delete Admin/Manager record, ref'd by _id.",
         "description": "Delete Admin/Manager record, ref'd by _id.",
         "parameters": [
@@ -230,13 +198,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "user_id",
-            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -264,18 +225,14 @@
         },
         "security": [
           {
-            "Admin": [
-              "delete"
-            ]
+            "Admin": ["delete"]
           }
         ]
       }
     },
     "/user/": {
       "get": {
-        "tags": [
-          "Customer"
-        ],
+        "tags": ["Customer"],
         "summary": "Get All Customer records.",
         "description": "Get All Customer records.",
         "responses": {
@@ -297,16 +254,12 @@
         },
         "security": [
           {
-            "Admin": [
-              "read"
-            ]
+            "Admin": ["read"]
           }
         ]
       },
       "post": {
-        "tags": [
-          "Customer"
-        ],
+        "tags": ["Customer"],
         "summary": "Create a new Customer record.",
         "description": "Create a new Customer record.",
         "responses": {
@@ -337,12 +290,8 @@
         },
         "security": [
           {
-            "Admin": [
-              "write"
-            ],
-            "Customer": [
-              "write"
-            ]
+            "Admin": ["write"],
+            "Customer": ["write"]
           }
         ],
         "requestBody": {
@@ -358,9 +307,7 @@
     },
     "/user/{id}": {
       "get": {
-        "tags": [
-          "Customer"
-        ],
+        "tags": ["Customer"],
         "summary": "Get Customer record by ID.",
         "description": "Get Customer record by ID.",
         "parameters": [
@@ -402,19 +349,13 @@
         },
         "security": [
           {
-            "Admin": [
-              "read"
-            ],
-            "Customer": [
-              "read"
-            ]
+            "Admin": ["read"],
+            "Customer": ["read"]
           }
         ]
       },
       "put": {
-        "tags": [
-          "Customer"
-        ],
+        "tags": ["Customer"],
         "summary": "Update Customer record, ref'd by _id, with optional fields.",
         "description": "Update Customer record, ref'd by _id, with optional fields.",
         "parameters": [
@@ -424,14 +365,8 @@
             "required": true,
             "schema": {
               "type": "string"
-            }
-          },
-          {
-            "name": "user_id",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
+            },
+            "description": "Customer ID"
           }
         ],
         "responses": {
@@ -462,12 +397,8 @@
         },
         "security": [
           {
-            "Admin": [
-              "write"
-            ],
-            "Customer": [
-              "write"
-            ]
+            "Admin": ["write"],
+            "Customer": ["write"]
           }
         ],
         "requestBody": {
@@ -481,9 +412,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Customer"
-        ],
+        "tags": ["Customer"],
         "summary": "Delete Customer record, ref'd by _id.",
         "description": "Delete Customer record, ref'd by _id.",
         "parameters": [
@@ -491,13 +420,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "user_id",
-            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -525,21 +447,15 @@
         },
         "security": [
           {
-            "Admin": [
-              "delete"
-            ],
-            "Customer": [
-              "delete"
-            ]
+            "Admin": ["delete"],
+            "Customer": ["delete"]
           }
         ]
       }
     },
     "/order/": {
       "get": {
-        "tags": [
-          "Orders"
-        ],
+        "tags": ["Orders"],
         "summary": "Get All Order records.",
         "description": "Get All Order records.",
         "responses": {
@@ -558,12 +474,15 @@
           "500": {
             "description": "Internal Server Error: Something happened on the server side while pulling the Order record."
           }
-        }
+        },
+        "security": [
+          {
+            "Admin": ["read"]
+          }
+        ]
       },
       "post": {
-        "tags": [
-          "Orders"
-        ],
+        "tags": ["Orders"],
         "summary": "Create Order record.",
         "description": "Create Order record.",
         "parameters": [
@@ -597,6 +516,12 @@
             "description": "Internal Server Error: Something happened on the server side while creating the Order record."
           }
         },
+        "security": [
+          {
+            "Admin": ["write"],
+            "Customer": ["write"]
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -610,9 +535,7 @@
     },
     "/order/customer": {
       "get": {
-        "tags": [
-          "Orders"
-        ],
+        "tags": ["Orders"],
         "summary": "Get Order records by Customer ID.",
         "description": "",
         "parameters": [
@@ -648,14 +571,18 @@
           "500": {
             "description": "Internal Server Error: Something happened on the server side while obtaining the Order record."
           }
-        }
+        },
+        "security": [
+          {
+            "Admin": ["read"],
+            "Customer": ["read"]
+          }
+        ]
       }
     },
     "/order/{id}": {
       "get": {
-        "tags": [
-          "Orders"
-        ],
+        "tags": ["Orders"],
         "summary": "Get Order record by ID.",
         "description": "",
         "parameters": [
@@ -667,15 +594,6 @@
               "type": "string"
             },
             "description": "The Order ID; a hexadecimal string of 24 characters."
-          },
-          {
-            "name": "user_id",
-            "description": "The Order User ID; a hexadecimal string of 24 characters. If not Admin (op_lvl 1) or Manager (op_lvl 2), must match the session user ID.",
-            "required": true,
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -697,12 +615,16 @@
           "500": {
             "description": "Internal Server Error: Something happened on the server side while obtaining the Order record."
           }
-        }
+        },
+        "security": [
+          {
+            "Admin": ["read"],
+            "Customer": ["read"]
+          }
+        ]
       },
       "put": {
-        "tags": [
-          "Orders"
-        ],
+        "tags": ["Orders"],
         "summary": "Update Order record, with optional fields.",
         "description": "Update Order record, with optional fields.",
         "parameters": [
@@ -714,15 +636,6 @@
               "type": "string"
             },
             "description": "The Order ID; a hexadecimal string of 24 characters."
-          },
-          {
-            "name": "user_id",
-            "description": "The Order User ID; a hexadecimal string of 24 characters. If not Admin (op_lvl 1) or Manager (op_lvl 2), must match the session user ID.",
-            "required": true,
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -748,6 +661,12 @@
             "description": "Internal Server Error: Something happened on the server side while obtaining the Order record."
           }
         },
+        "security": [
+          {
+            "Admin": ["write"],
+            "Customer": ["write"]
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -759,9 +678,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Orders"
-        ],
+        "tags": ["Orders"],
         "summary": "Delete Order record by ID.",
         "description": "Delete Order record by ID.",
         "parameters": [
@@ -773,15 +690,6 @@
               "type": "string"
             },
             "description": "The Order ID; a hexadecimal string of 24 characters."
-          },
-          {
-            "name": "user_id",
-            "description": "The Order User ID; a hexadecimal string of 24 characters. If not Admin (op_lvl 1) or Manager (op_lvl 2), must match the session user ID.",
-            "required": true,
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -803,14 +711,18 @@
           "500": {
             "description": "Internal Server Error: Something happened on the server side while obtaining the Order record."
           }
-        }
+        },
+        "security": [
+          {
+            "Admin": ["delete"],
+            "Customer": ["delete"]
+          }
+        ]
       }
     },
     "/inventory/": {
       "get": {
-        "tags": [
-          "Inventory"
-        ],
+        "tags": ["Inventory"],
         "summary": "Get All Inventory records.",
         "description": "Get All Inventory records.",
         "responses": {
@@ -826,9 +738,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Inventory"
-        ],
+        "tags": ["Inventory"],
         "summary": "Create a new Inventory record.",
         "description": "Create a new Inventory record.",
         "responses": {
@@ -848,6 +758,11 @@
             "description": "Internal Server Error: Something happened on the server side while creating the Inventory record."
           }
         },
+        "security": [
+          {
+            "Admin": ["write"]
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -861,9 +776,7 @@
     },
     "/inventory/{id}": {
       "get": {
-        "tags": [
-          "Inventory"
-        ],
+        "tags": ["Inventory"],
         "summary": "Get inventory items by Object ID.",
         "description": "Get inventory items by Object ID.",
         "parameters": [
@@ -871,13 +784,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "user_id",
-            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -902,9 +808,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Inventory"
-        ],
+        "tags": ["Inventory"],
         "summary": "Update an Inventory item record.",
         "description": "Update an Inventory item record.",
         "parameters": [
@@ -912,13 +816,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "user_id",
-            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -947,6 +844,11 @@
             "description": "Internal Server Error: Something happened on the server side while updating the Inventory record."
           }
         },
+        "security": [
+          {
+            "Admin": ["write"]
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -958,9 +860,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Inventory"
-        ],
+        "tags": ["Inventory"],
         "summary": "Delete an Inventory record.",
         "description": "Delete an Inventory record.",
         "parameters": [
@@ -968,13 +868,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "user_id",
-            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -999,7 +892,12 @@
           "500": {
             "description": "Internal Server Error: Something happened on the server side while deleting the Inventory record."
           }
-        }
+        },
+        "security": [
+          {
+            "Admin": ["delete"]
+          }
+        ]
       }
     }
   },
@@ -1061,12 +959,7 @@
             "example": ""
           }
         },
-        "required": [
-          "displayName",
-          "fname",
-          "email",
-          "op_lvl"
-        ]
+        "required": ["displayName", "fname", "email", "op_lvl"]
       },
       "schemaAdminOptional": {
         "type": "object",
@@ -1121,11 +1014,7 @@
             "example": ""
           }
         },
-        "required": [
-          "displayName",
-          "fname",
-          "email"
-        ]
+        "required": ["displayName", "fname", "email"]
       },
       "schemaCustomerOptional": {
         "type": "object",
@@ -1164,10 +1053,7 @@
             "example": ""
           }
         },
-        "required": [
-          "itemName",
-          "amount"
-        ]
+        "required": ["itemName", "amount"]
       },
       "schemaOrderOptional": {
         "type": "object",
@@ -1206,12 +1092,7 @@
             "example": ""
           }
         },
-        "required": [
-          "productName",
-          "price",
-          "stock",
-          "description"
-        ]
+        "required": ["productName", "price", "stock", "description"]
       },
       "schemaInventoryOptional": {
         "type": "object",
